# reactor

./: pyproject.toml  readme.md
src/: Atom.py  ComplexEntity.py  ComplexImage.py  ControlRod.py  Controller.py  Emitter.py  Entity.py  Geometry.py  GraphicalEntity.py  Image.py  Moveable.py  Neutron.py  Physics.py  Screen.py  Settings.py  Shapes.py  SimpleGraphicalEntity.py  SimpleImage.py  Thermal.py  Water.py  config  game.py  main.py  screen-test.py
src/entities/: __init__.py  atom.py  component_controller.py  component_emitter.py  component_thermal.py  entity.py  entity_control_rod.py  entity_movable.py  entity_neutron.py  entity_simple_shapes.py  entity_water.py  graphical_entity.py  graphical_entity_complex.py  graphical_entity_simple.py
src/geometry/: __init__.py  constants.py  coordinate.py  point.py  vector.py
src/image/: __init__.py  circle_image.py  image.py  image_complex.py  image_simple.py  rectangle_image.py  screen_grid.py
src/image/shapes/: __init__.py  circle.py  constants.py  rectangle.py  shapes.py
src/util/: Physics.py  __init__.py  config
tests/: test_emitter.py  test_entity.py  test_graphical_entity.py  test_image.py  test_point.py  test_shapes.py  test_vector.py
